# cv-py

./: .gitignore  LICENSE.rst  README.md  pyproject.toml
cv/: __init__.py  about.py
cv/data/: cdcs.py  resource.py
cv_py/: __init__.py
cv_py/data/: README.md  resource.py
cv_py/resources/: builtins.py  cord-tasks.yml  datapackage.py
cv_py/tools/: process.py  remote.py
examples/: README.md
notebooks/: README.md  bern.ipynb  bern.md  demo.md  environment.yml  environment.yml~  load_dataset.ipynb  rise.css
tests/: test_cv.py
