[tool.poetry]
name = "cv-py"
version = "0.1.0"
description = ""
authors = ["tbsexton <tbsexton@asu.edu>"]
packages = [
    { include = "cv" },
#    { include = "extra_package/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
tqdm = "^4.43.0"
scikit-learn = "^0.22.2"
textacy = "^0.10.0"
scispacy = "^0.2.4"
pyarrow = "^0.16.0"
dask = {extras = ["complete"], version = "^2.13.0"}

[tool.poetry.scripts]
cv-download = 'cv.data.cdcs:download'

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
