[tool.poetry]
name = "cv-py"
version = "0.0.0"
description = "Collection of tools and techniques to kick-start analysis of the COVID-19 Research Challenge Dataset "
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
include = ["cv_py/resources/*.yml"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.43.0"
dacite = "^1.5.0"

# versioning datapackages
requests = "^2.23.0"
semantic_version = "^2.8.5"

# basic analytics
pandas = "^1.0.3"
pyarrow = "^3.0.0"
scikit-learn = "^0.24.1"
dask = {extras = ["complete"], version = "^2.13.0"}

# A list of optional dependencies, choosable by module
## Spacy ecosystem
textacy = { version = "^0.10.0", optional = true}
scispacy = { version = "^0.2.4", optional = true}

## flair ecosystem
flair = { version = "^0.4.5", optional = true}

## Viz tools
holoviews = {extras = ["recommended"], version = "^1.13.2", optional = true}
seaborn = {version = "^0.10.0", optional = true}
panel = {version = "^0.9.5", optional = true}
[tool.poetry.extras]
spacy = ["textacy", "scispacy"]
flair = ["flair"]
viz = ["holoviews", "panel", "seaborn"]

[tool.poetry.scripts]
cv-download = 'cv_py.resources.datapackage:download_cli'

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
black = "^19.10b0"
taskipy = "^1.2.1"
poetry-dynamic-versioning = "^0.10.0"

[tool.taskipy.tasks]
format = "black cv_py/"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
